--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,6 +23,7 @@ r.DynamicGlobalIlluminationMethod=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+r.Nanite.AllowTessellation=1
 
 
 r.Shadow.Virtual.Enable=1
